fix: use the key a person typed, on a provider whose endpoint they never had to name, and open 1.52.1
Registering a Gemini model on a deployment that serves chat from somebody else
was broken three ways, and all three came from the same assumption: that a row
with no base URL stands for the application's own endpoint.

That held while a deployment had one provider. It stopped holding the moment a
row could name one. Gemini's Developer API has a single well-known host —
https://generativelanguage.googleapis.com, which the SDK bakes in — so an
ordinary Gemini row is a key and a model and no URL at all.

- Borrowing now keys on the row carrying no credential rather than no base URL.
  Before, such a row authenticated with the deployment's Gemini credential,
  which on an OpenAI deployment does not exist, ignoring the key the person
  typed. The probe passed, being handed the token directly, so registration
  succeeded and every run failed. The same conflation was in the OpenAI
  provider, for a row naming Gemini's protocol the other way round.

  A row that genuinely carries no credential is UserModelRegistry.DEFAULT_ROW —
  the application's model with an effort of the user's choosing. Borrowing is
  right there, and only there.

- AddChatModel required a base URL unconditionally, so it refused the
  registration for want of a field with nothing to put in it.
  ProviderChatClients.requiresBaseUrl() answers that per provider instead.

- DispatchingUserChatClients held its providers in a Map.copyOf, whose iteration
  order is unspecified. The /config protocol select is drawn from it, so its
  options could reorder between restarts.

The endpoint resolution is a static method now so the rule can be asserted
without building a client, which is where it becomes invisible.